# arinc818-sast-lab

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  vcpkg.json
.github/workflows/: devsecops.yml
include/: arinc818_simulator.h
src/: main.cpp
